--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
   "license": "MIT",
   "dependencies": {
     "@fontsource/marko-one": "^4.5.2",
-    "rfdc": "^1.3.0"
+    "express": "^4.17.3",
+    "rfdc": "^1.3.0",
+    "socket.io": "^4.4.1",
+    "socket.io-client": "^4.4.1"
   },
   "devDependencies": {
     "esbuild": "^0.14.25",
@@ -15,6 +18,7 @@
   },
   "scripts": {
     "start": "node esbuild_dev",
-    "build": "node esbuild_prod"
+    "build": "node esbuild_prod",
+    "server": "node app"
   }
 }
